# electron-vite-react-opengl-webassembly

./: INPUT_UDP_INTEGRATION_README.md  README.md  UDP_COMMUNICATION_README.md  UDP_DEBUG_FIX_SUMMARY.md  electron-builder.json  index.html  package.json  test_input_udp.js  test_udp.js  test_udp_debug.js  test_udp_manual.js  test_udp_simple.cjs  tsconfig.json  udp_test_client.js  vite.config.ts
electron/main/: index.js
electron/preload/: preload.js
public/: OpenglWebTest.js  OpenglWebTest.wasm
public/data/media/: animation1.ozz  animation2.ozz  animation3.ozz  skeleton.ozz
src/: index.jsx
src/components/myapp/: App.css  CMakeLists.txt  Index.jsx  WasmLoader.jsx  build_with_ninja.bat  build_with_ninja_debug.bat
src/components/myapp/build_emscripten/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  OpenglWebTest.html  OpenglWebTest.js  OpenglWebTest.wasm  build.ninja  cmake_install.cmake
src/components/myapp/build_emscripten_debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  OpenglWebTest.html  OpenglWebTest.js  build.ninja  cmake_install.cmake
src/components/myapp/cpp/: bufferobject.cpp  bufferobject.h  gameobject.cpp  gameobject.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  ozz_animation.cpp  ozz_animation.h  rendercommand.cpp  rendercommand.h  renderpass.cpp  renderpass.h  renderpipeline.cpp  renderpipeline.h  scene.cpp  scene.h  scenemanager.cpp  scenemanager.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexarrayobject.cpp  vertexarrayobject.h
src/components/myapp/fbx-loader/: binding.gyp  index.js  package.json
src/components/myapp/fbx-loader/include/: fbx_data.h
src/components/myapp/fbx-loader/src/: fbx_loader.cc  fbx_parser.cc
src/public/: OpenglWebTest.js  OpenglWebTest.wasm
